Update to v3 ALPHA

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -237,11 +237,43 @@
     <string name="select_icons">Selecciona iconos</string>
     <string name="use_random_reboot">Usar orden aleatorio</string>
     <string name="grxs_rom_info">Información de la ROM</string>
-    <string name="rows_portrait">En modo vertical</string>
-    <string name="rows_landscape">En modo horizontal</string>
+    <string name="rows_portrait">Toggles en modo vertical</string>
+    <string name="rows_landscape">Toggles en modo horizontal</string>
     <string name="max_rows">Máx. de toggles visibles</string>
     <string name="volume_keys">Teclas de volumen</string>
     <string name="screen_off">Pantalla apagada</string>
     <string name="screen_on">Pantalla encendida</string>
+    <string name="bg_tgs">Fondo y toggles</string>
+    <string name="bluetooth_connected">Bluetooth conectado</string>
+    <string name="bolt">Rayo</string>
+    <string name="bolt_on_white_bgs">Rayo en fondos blancos</string>
+    <string name="buttons">Botones</string>
+    <string name="clock_date_settings_buttons">Reloj/Fecha/Ajustes</string>
+    <string name="date_preferences">Preferencias de fecha</string>
+    <string name="day_mode">Modo día</string>
+    <string name="empty_level">Nivel vacio</string>
+    <string name="empty_level_on_white_bgs">Nivel vacio en fondos blancos</string>
+    <string name="more_settings">Mas ajustes</string>
+    <string name="night_mode">Modo noche</string>
+    <string name="notifications">Notificaciones</string>
+    <string name="notifs_on_dual">Mostrar notifs. en barra dual</string>
+    <string name="panel_mods">Panel (Colores/Toggles/Botones)</string>
+    <string name="percentage">Porcentaje</string>
+    <string name="percentage_on_white_bgs">Porcentaje en fondos blancos</string>
+    <string name="pm_split">Usar 2 columnas</string>
+    <string name="power_menu">Menú de apagado</string>
+    <string name="sb_date">Fecha</string>
+    <string name="search">Buscar</string>
+    <string name="settings">Ajustes</string>
+    <string name="tile_bg_dim">Fondo de toggle dim</string>
+    <string name="tile_bg_off">Fondo de toggle apagado</string>
+    <string name="tile_bg_on">Fondo de toggle encendido</string>
+    <string name="tile_icon_bg_dim">Icono de toggle dim</string>
+    <string name="tile_icon_bg_off">Icono de toggle apagado</string>
+    <string name="tile_icon_bg_on">Icono de toggle encendido</string>
+    <string name="first_value">Primer valor</string>
+    <string name="second_value">Segundo valor</string>
+    <string name="third_value">Tercer valor</string>
+    <string name="separator">Separador</string>
 
 </resources>
